# RP2040-Dreamcast-Controller

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md
app/: main.cpp
docs/: building.md  research-and-implementation-plan.md
docs/bringup/: hardware-notes.md  packet-fixtures.md
include/dreamcast/: controller_device.hpp  controller_input_parser.hpp  dreamcast_controller.hpp  maple_constants.hpp  maple_packet.hpp  maple_pio_buffer.hpp  maple_session.hpp  maple_wire.hpp
include/dreamcast/pico/: maple_phy.hpp
src/: controller_device.cpp  controller_input_parser.cpp  dreamcast_controller.cpp  maple_packet.cpp  maple_pio_buffer.cpp  maple_session.cpp  maple_wire.cpp
src/pico/: maple_in.pio  maple_out.pio  maple_phy.cpp
tests/: test_main.cpp
tools/: maple_sim.cpp
